@@ -1,3 +1,7 @@
+2015-02-19  Corinna Vinschen  <corinna@vinschen.de>
+
+	* sec_acl.cc (setacl): Always grant owner FILE_WRITE_ATTRIBUTES access.
+
 2015-02-18  Corinna Vinschen  <corinna@vinschen.de>
 
 	* ldap.cc (struct cyg_ldap_search): Add scope member.
